Feat : added play functionalities

--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -1,4 +1,4 @@
-.main {
+/*.main {
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
@@ -197,4 +197,4 @@
 .logos img {
   width: 20px;
   height: 20px;
-}
+}*/
