--- a/src/styles/CreateProfile.module.css
+++ b/src/styles/CreateProfile.module.css
@@ -1,4 +1,4 @@
-.container {
+/*.container {
   margin: 20px auto;
   max-width: 600px;
   padding: 20px;
@@ -64,4 +64,4 @@
 
 .submitButton:hover {
   background-image: linear-gradient(135deg, hsl(284, 100%, 68%) 0%, #d45bff 100%);
-}
+}*/
